--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "babel-preset-expo": "~8.1.0",
     "jest": "^26.1.0",
     "jest-expo": "^38.0.2",
+    "react-native-testing-library": "^2.1.1",
     "react-test-renderer": "^16.13.1"
   },
   "private": true,
