--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "expo-image-picker": "~8.3.0",
     "expo-mail-composer": "~8.2.1",
     "expo-status-bar": "^1.0.2",
+    "moment": "^2.27.0",
     "native-base": "^2.13.13",
     "react": "~16.11.0",
     "react-dom": "~16.11.0",
